decaf_parser.output
Terminals unused in grammar

   KW_EXTENDS
   KW_NEW
   KW_NULL
   OP_NOT


State 5 conflicts: 2 shift/reduce
State 9 conflicts: 2 shift/reduce


Grammar

    0 $accept: input $end

    1 input: KW_CLASS ID '{' opt_field_decl opt_method_decl '}'

    2 opt_field_decl: field_decls
    3               | %empty

    4 field_decls: field_decls field
    5            | field

    6 field: type id_list_global ';'
    7      | type ID '=' constant ';'

    8 id_list_global: id_list_global ',' id_decl_global
    9               | id_decl_global

   10 id_decl_global: ID
   11               | ID '[' INT_CONSTANT ']'

   12 opt_method_decl: method_decl
   13                | %empty

   14 method_decl: method_decl method
   15            | method

   16 method: type ID '(' opt_arg_list ')' block
   17       | KW_VOID ID '(' opt_arg_list ')' block

   18 opt_arg_list: arg_list
   19             | %empty

   20 arg_list: arg_list ',' arg
   21         | arg

   22 arg: type ID

   23 block: '{' opt_var_decl opt_statements '}'

   24 opt_var_decl: var_decls
   25             | %empty

   26 var_decls: var_decls var_decl
   27          | var_decl

   28 var_decl: type id_list_local ';'

   29 id_list_local: id_list_local ',' ID
   30              | ID

   31 type: KW_INT
   32     | KW_BOOL

   33 opt_statements: statements
   34               | %empty

   35 statements: statements statement
   36           | statement

   37 statement: assign ';'
   38          | method_call ';'
   39          | KW_IF '(' expr ')' block opt_else
   40          | KW_WHILE '(' expr ')' block
   41          | KW_FOR '(' assign_list ';' expr ';' assign_list ')' block
   42          | KW_RETURN opt_expr ';'
   43          | KW_BREAK ';'
   44          | KW_CONTINUE ';'
   45          | block

   46 assign_list: assign_list ',' assign
   47            | assign

   48 opt_else: KW_ELSE block
   49         | %empty

   50 opt_expr: expr
   51         | %empty

   52 assign: lvalue '=' expr

   53 method_call: ID '(' opt_call_arg_list ')'
   54            | KW_PRINT print_list
   55            | KW_READ read_list

   56 opt_call_arg_list: call_arg_list
   57                  | %empty

   58 call_arg_list: call_arg_list ',' expr
   59              | expr

   60 print_list: print_list ',' argument
   61           | argument

   62 read_list: read_list ',' lvalue
   63          | lvalue

   64 argument: STRING_CONSTANT
   65         | expr

   66 lvalue: ID opt_array

   67 opt_array: '[' expr ']'
   68          | %empty

   69 expr: expr OP_OR expra
   70     | expra

   71 expra: expra OP_AND equality
   72      | equality

   73 equality: equality OP_EQ relational
   74         | equality OP_NE relational
   75         | relational

   76 relational: relational OP_GT shift
   77           | relational OP_LT shift
   78           | relational OP_LTE shift
   79           | relational OP_GTE shift
   80           | shift

   81 shift: shift OP_SHIFT_RIGHT module
   82      | shift OP_SHIFT_LEFT module
   83      | shift OP_ROT module
   84      | module

   85 module: module '%' expras
   86       | expras

   87 expras: expras '+' term
   88       | expras '-' term
   89       | term

   90 term: term '*' factor
   91     | term '/' factor
   92     | factor

   93 factor: '-' factor
   94       | '!' factor
   95       | lvalue
   96       | ID '(' opt_call_arg_list ')'
   97       | constant
   98       | '(' expr ')'

   99 constant: INT_CONSTANT
  100         | CHAR_CONSTANT
  101         | bool_constant

  102 bool_constant: KW_TRUE
  103              | KW_FALSE


Terminals, with rules where they appear

$end (0) 0
'!' (33) 94
'%' (37) 85
'(' (40) 16 17 39 40 41 53 96 98
')' (41) 16 17 39 40 41 53 96 98
'*' (42) 90
'+' (43) 87
',' (44) 8 20 29 46 58 60 62
'-' (45) 88 93
'/' (47) 91
';' (59) 6 7 28 37 38 41 42 43 44
'=' (61) 7 52
'[' (91) 11 67
']' (93) 11 67
'{' (123) 1 23
'}' (125) 1 23
error (256)
INT_CONSTANT (258) 11 99
CHAR_CONSTANT (259) 100
ID (260) 1 7 10 11 16 17 22 29 30 53 66 96
STRING_CONSTANT (261) 64
KW_CLASS (262) 1
KW_BREAK (263) 43
KW_READ (264) 55
KW_PRINT (265) 54
KW_CONTINUE (266) 44
KW_EXTENDS (267)
KW_ELSE (268) 48
KW_WHILE (269) 40
KW_FOR (270) 41
KW_IF (271) 39
KW_INT (272) 31
KW_NEW (273)
KW_NULL (274)
KW_RETURN (275) 42
KW_TRUE (276) 102
KW_FALSE (277) 103
KW_VOID (278) 17
KW_BOOL (279) 32
OP_LT (280) 77
OP_GT (281) 76
OP_LTE (282) 78
OP_GTE (283) 79
OP_NE (284) 74
OP_EQ (285) 73
OP_ROT (286) 83
OP_NOT (287)
OP_OR (288) 69
OP_AND (289) 71
OP_SHIFT_LEFT (290) 82
OP_SHIFT_RIGHT (291) 81


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
input (53)
    on left: 1, on right: 0
opt_field_decl (54)
    on left: 2 3, on right: 1
field_decls (55)
    on left: 4 5, on right: 2 4
field (56)
    on left: 6 7, on right: 4 5
id_list_global (57)
    on left: 8 9, on right: 6 8
id_decl_global (58)
    on left: 10 11, on right: 8 9
opt_method_decl (59)
    on left: 12 13, on right: 1
method_decl (60)
    on left: 14 15, on right: 12 14
method (61)
    on left: 16 17, on right: 14 15
opt_arg_list (62)
    on left: 18 19, on right: 16 17
arg_list (63)
    on left: 20 21, on right: 18 20
arg (64)
    on left: 22, on right: 20 21
block (65)
    on left: 23, on right: 16 17 39 40 41 45 48
opt_var_decl (66)
    on left: 24 25, on right: 23
var_decls (67)
    on left: 26 27, on right: 24 26
var_decl (68)
    on left: 28, on right: 26 27
id_list_local (69)
    on left: 29 30, on right: 28 29
type (70)
    on left: 31 32, on right: 6 7 16 22 28
opt_statements (71)
    on left: 33 34, on right: 23
statements (72)
    on left: 35 36, on right: 33 35
statement (73)
    on left: 37 38 39 40 41 42 43 44 45, on right: 35 36
assign_list (74)
    on left: 46 47, on right: 41 46
opt_else (75)
    on left: 48 49, on right: 39
opt_expr (76)
    on left: 50 51, on right: 42
assign (77)
    on left: 52, on right: 37 46 47
method_call (78)
    on left: 53 54 55, on right: 38
opt_call_arg_list (79)
    on left: 56 57, on right: 53 96
call_arg_list (80)
    on left: 58 59, on right: 56 58
print_list (81)
    on left: 60 61, on right: 54 60
read_list (82)
    on left: 62 63, on right: 55 62
argument (83)
    on left: 64 65, on right: 60 61
lvalue (84)
    on left: 66, on right: 52 62 63 95
opt_array (85)
    on left: 67 68, on right: 66
expr (86)
    on left: 69 70, on right: 39 40 41 50 52 58 59 65 67 69 98
expra (87)
    on left: 71 72, on right: 69 70 71
equality (88)
    on left: 73 74 75, on right: 71 72 73 74
relational (89)
    on left: 76 77 78 79 80, on right: 73 74 75 76 77 78 79
shift (90)
    on left: 81 82 83 84, on right: 76 77 78 79 80 81 82 83
module (91)
    on left: 85 86, on right: 81 82 83 84 85
expras (92)
    on left: 87 88 89, on right: 85 86 87 88
term (93)
    on left: 90 91 92, on right: 87 88 89 90 91
factor (94)
    on left: 93 94 95 96 97 98, on right: 90 91 92 93 94
constant (95)
    on left: 99 100 101, on right: 7 97
bool_constant (96)
    on left: 102 103, on right: 101


State 0

    0 $accept: . input $end
    1 input: . KW_CLASS ID '{' opt_field_decl opt_method_decl '}'

    KW_CLASS  shift, and go to state 1

    input  go to state 2


State 1

    1 input: KW_CLASS . ID '{' opt_field_decl opt_method_decl '}'

    ID  shift, and go to state 3


State 2

    0 $accept: input . $end

    $end  shift, and go to state 4


State 3

    1 input: KW_CLASS ID . '{' opt_field_decl opt_method_decl '}'

    '{'  shift, and go to state 5


State 4

    0 $accept: input $end .

    $default  accept


State 5

    1 input: KW_CLASS ID '{' . opt_field_decl opt_method_decl '}'
    2 opt_field_decl: . field_decls
    3               | . %empty  [KW_INT, KW_VOID, KW_BOOL, '}']
    4 field_decls: . field_decls field
    5            | . field
    6 field: . type id_list_global ';'
    7      | . type ID '=' constant ';'
   31 type: . KW_INT
   32     | . KW_BOOL

    KW_INT   shift, and go to state 6
    KW_BOOL  shift, and go to state 7

    KW_INT    [reduce using rule 3 (opt_field_decl)]
    KW_BOOL   [reduce using rule 3 (opt_field_decl)]
    $default  reduce using rule 3 (opt_field_decl)

    opt_field_decl  go to state 8
    field_decls     go to state 9
    field           go to state 10
    type            go to state 11


State 6

   31 type: KW_INT .

    $default  reduce using rule 31 (type)


State 7

   32 type: KW_BOOL .

    $default  reduce using rule 32 (type)


State 8

    1 input: KW_CLASS ID '{' opt_field_decl . opt_method_decl '}'
   12 opt_method_decl: . method_decl
   13                | . %empty  ['}']
   14 method_decl: . method_decl method
   15            | . method
   16 method: . type ID '(' opt_arg_list ')' block
   17       | . KW_VOID ID '(' opt_arg_list ')' block
   31 type: . KW_INT
   32     | . KW_BOOL

    KW_INT   shift, and go to state 6
    KW_VOID  shift, and go to state 12
    KW_BOOL  shift, and go to state 7

    $default  reduce using rule 13 (opt_method_decl)

    opt_method_decl  go to state 13
    method_decl      go to state 14
    method           go to state 15
    type             go to state 16


State 9

    2 opt_field_decl: field_decls .  [KW_INT, KW_VOID, KW_BOOL, '}']
    4 field_decls: field_decls . field
    6 field: . type id_list_global ';'
    7      | . type ID '=' constant ';'
   31 type: . KW_INT
   32     | . KW_BOOL

    KW_INT   shift, and go to state 6
    KW_BOOL  shift, and go to state 7

    KW_INT    [reduce using rule 2 (opt_field_decl)]
    KW_BOOL   [reduce using rule 2 (opt_field_decl)]
    $default  reduce using rule 2 (opt_field_decl)

    field  go to state 17
    type   go to state 11


State 10

    5 field_decls: field .

    $default  reduce using rule 5 (field_decls)


State 11

    6 field: type . id_list_global ';'
    7      | type . ID '=' constant ';'
    8 id_list_global: . id_list_global ',' id_decl_global
    9               | . id_decl_global
   10 id_decl_global: . ID
   11               | . ID '[' INT_CONSTANT ']'

    ID  shift, and go to state 18

    id_list_global  go to state 19
    id_decl_global  go to state 20


State 12

   17 method: KW_VOID . ID '(' opt_arg_list ')' block

    ID  shift, and go to state 21


State 13

    1 input: KW_CLASS ID '{' opt_field_decl opt_method_decl . '}'

    '}'  shift, and go to state 22


State 14

   12 opt_method_decl: method_decl .  ['}']
   14 method_decl: method_decl . method
   16 method: . type ID '(' opt_arg_list ')' block
   17       | . KW_VOID ID '(' opt_arg_list ')' block
   31 type: . KW_INT
   32     | . KW_BOOL

    KW_INT   shift, and go to state 6
    KW_VOID  shift, and go to state 12
    KW_BOOL  shift, and go to state 7

    $default  reduce using rule 12 (opt_method_decl)

    method  go to state 23
    type    go to state 16


State 15

   15 method_decl: method .

    $default  reduce using rule 15 (method_decl)


State 16

   16 method: type . ID '(' opt_arg_list ')' block

    ID  shift, and go to state 24


State 17

    4 field_decls: field_decls field .

    $default  reduce using rule 4 (field_decls)


State 18

    7 field: type ID . '=' constant ';'
   10 id_decl_global: ID .  [';', ',']
   11               | ID . '[' INT_CONSTANT ']'

    '='  shift, and go to state 25
    '['  shift, and go to state 26

    $default  reduce using rule 10 (id_decl_global)


State 19

    6 field: type id_list_global . ';'
    8 id_list_global: id_list_global . ',' id_decl_global

    ';'  shift, and go to state 27
    ','  shift, and go to state 28


State 20

    9 id_list_global: id_decl_global .

    $default  reduce using rule 9 (id_list_global)


State 21

   17 method: KW_VOID ID . '(' opt_arg_list ')' block

    '('  shift, and go to state 29


State 22

    1 input: KW_CLASS ID '{' opt_field_decl opt_method_decl '}' .

    $default  reduce using rule 1 (input)


State 23

   14 method_decl: method_decl method .

    $default  reduce using rule 14 (method_decl)


State 24

   16 method: type ID . '(' opt_arg_list ')' block

    '('  shift, and go to state 30


State 25

    7 field: type ID '=' . constant ';'
   99 constant: . INT_CONSTANT
  100         | . CHAR_CONSTANT
  101         | . bool_constant
  102 bool_constant: . KW_TRUE
  103              | . KW_FALSE

    INT_CONSTANT   shift, and go to state 31
    CHAR_CONSTANT  shift, and go to state 32
    KW_TRUE        shift, and go to state 33
    KW_FALSE       shift, and go to state 34

    constant       go to state 35
    bool_constant  go to state 36


State 26

   11 id_decl_global: ID '[' . INT_CONSTANT ']'

    INT_CONSTANT  shift, and go to state 37


State 27

    6 field: type id_list_global ';' .

    $default  reduce using rule 6 (field)


State 28

    8 id_list_global: id_list_global ',' . id_decl_global
   10 id_decl_global: . ID
   11               | . ID '[' INT_CONSTANT ']'

    ID  shift, and go to state 38

    id_decl_global  go to state 39


State 29

   17 method: KW_VOID ID '(' . opt_arg_list ')' block
   18 opt_arg_list: . arg_list
   19             | . %empty  [')']
   20 arg_list: . arg_list ',' arg
   21         | . arg
   22 arg: . type ID
   31 type: . KW_INT
   32     | . KW_BOOL

    KW_INT   shift, and go to state 6
    KW_BOOL  shift, and go to state 7

    $default  reduce using rule 19 (opt_arg_list)

    opt_arg_list  go to state 40
    arg_list      go to state 41
    arg           go to state 42
    type          go to state 43


State 30

   16 method: type ID '(' . opt_arg_list ')' block
   18 opt_arg_list: . arg_list
   19             | . %empty  [')']
   20 arg_list: . arg_list ',' arg
   21         | . arg
   22 arg: . type ID
   31 type: . KW_INT
   32     | . KW_BOOL

    KW_INT   shift, and go to state 6
    KW_BOOL  shift, and go to state 7

    $default  reduce using rule 19 (opt_arg_list)

    opt_arg_list  go to state 44
    arg_list      go to state 41
    arg           go to state 42
    type          go to state 43


State 31

   99 constant: INT_CONSTANT .

    $default  reduce using rule 99 (constant)


State 32

  100 constant: CHAR_CONSTANT .

    $default  reduce using rule 100 (constant)


State 33

  102 bool_constant: KW_TRUE .

    $default  reduce using rule 102 (bool_constant)


State 34

  103 bool_constant: KW_FALSE .

    $default  reduce using rule 103 (bool_constant)


State 35

    7 field: type ID '=' constant . ';'

    ';'  shift, and go to state 45


State 36

  101 constant: bool_constant .

    $default  reduce using rule 101 (constant)


State 37

   11 id_decl_global: ID '[' INT_CONSTANT . ']'

    ']'  shift, and go to state 46


State 38

   10 id_decl_global: ID .  [';', ',']
   11               | ID . '[' INT_CONSTANT ']'

    '['  shift, and go to state 26

    $default  reduce using rule 10 (id_decl_global)


State 39

    8 id_list_global: id_list_global ',' id_decl_global .

    $default  reduce using rule 8 (id_list_global)


State 40

   17 method: KW_VOID ID '(' opt_arg_list . ')' block

    ')'  shift, and go to state 47


State 41

   18 opt_arg_list: arg_list .  [')']
   20 arg_list: arg_list . ',' arg

    ','  shift, and go to state 48

    $default  reduce using rule 18 (opt_arg_list)


State 42

   21 arg_list: arg .

    $default  reduce using rule 21 (arg_list)


State 43

   22 arg: type . ID

    ID  shift, and go to state 49


State 44

   16 method: type ID '(' opt_arg_list . ')' block

    ')'  shift, and go to state 50


State 45

    7 field: type ID '=' constant ';' .

    $default  reduce using rule 7 (field)


State 46

   11 id_decl_global: ID '[' INT_CONSTANT ']' .

    $default  reduce using rule 11 (id_decl_global)


State 47

   17 method: KW_VOID ID '(' opt_arg_list ')' . block
   23 block: . '{' opt_var_decl opt_statements '}'

    '{'  shift, and go to state 51

    block  go to state 52


State 48

   20 arg_list: arg_list ',' . arg
   22 arg: . type ID
   31 type: . KW_INT
   32     | . KW_BOOL

    KW_INT   shift, and go to state 6
    KW_BOOL  shift, and go to state 7

    arg   go to state 53
    type  go to state 43


State 49

   22 arg: type ID .

    $default  reduce using rule 22 (arg)


State 50

   16 method: type ID '(' opt_arg_list ')' . block
   23 block: . '{' opt_var_decl opt_statements '}'

    '{'  shift, and go to state 51

    block  go to state 54


State 51

   23 block: '{' . opt_var_decl opt_statements '}'
   24 opt_var_decl: . var_decls
   25             | . %empty  [ID, KW_BREAK, KW_READ, KW_PRINT, KW_CONTINUE, KW_WHILE, KW_FOR, KW_IF, KW_RETURN, '{', '}']
   26 var_decls: . var_decls var_decl
   27          | . var_decl
   28 var_decl: . type id_list_local ';'
   31 type: . KW_INT
   32     | . KW_BOOL

    KW_INT   shift, and go to state 6
    KW_BOOL  shift, and go to state 7

    $default  reduce using rule 25 (opt_var_decl)

    opt_var_decl  go to state 55
    var_decls     go to state 56
    var_decl      go to state 57
    type          go to state 58


State 52

   17 method: KW_VOID ID '(' opt_arg_list ')' block .

    $default  reduce using rule 17 (method)


State 53

   20 arg_list: arg_list ',' arg .

    $default  reduce using rule 20 (arg_list)


State 54

   16 method: type ID '(' opt_arg_list ')' block .

    $default  reduce using rule 16 (method)


State 55

   23 block: . '{' opt_var_decl opt_statements '}'
   23      | '{' opt_var_decl . opt_statements '}'
   33 opt_statements: . statements
   34               | . %empty  ['}']
   35 statements: . statements statement
   36           | . statement
   37 statement: . assign ';'
   38          | . method_call ';'
   39          | . KW_IF '(' expr ')' block opt_else
   40          | . KW_WHILE '(' expr ')' block
   41          | . KW_FOR '(' assign_list ';' expr ';' assign_list ')' block
   42          | . KW_RETURN opt_expr ';'
   43          | . KW_BREAK ';'
   44          | . KW_CONTINUE ';'
   45          | . block
   52 assign: . lvalue '=' expr
   53 method_call: . ID '(' opt_call_arg_list ')'
   54            | . KW_PRINT print_list
   55            | . KW_READ read_list
   66 lvalue: . ID opt_array

    ID           shift, and go to state 59
    KW_BREAK     shift, and go to state 60
    KW_READ      shift, and go to state 61
    KW_PRINT     shift, and go to state 62
    KW_CONTINUE  shift, and go to state 63
    KW_WHILE     shift, and go to state 64
    KW_FOR       shift, and go to state 65
    KW_IF        shift, and go to state 66
    KW_RETURN    shift, and go to state 67
    '{'          shift, and go to state 51

    $default  reduce using rule 34 (opt_statements)

    block           go to state 68
    opt_statements  go to state 69
    statements      go to state 70
    statement       go to state 71
    assign          go to state 72
    method_call     go to state 73
    lvalue          go to state 74


State 56

   24 opt_var_decl: var_decls .  [ID, KW_BREAK, KW_READ, KW_PRINT, KW_CONTINUE, KW_WHILE, KW_FOR, KW_IF, KW_RETURN, '{', '}']
   26 var_decls: var_decls . var_decl
   28 var_decl: . type id_list_local ';'
   31 type: . KW_INT
   32     | . KW_BOOL

    KW_INT   shift, and go to state 6
    KW_BOOL  shift, and go to state 7

    $default  reduce using rule 24 (opt_var_decl)

    var_decl  go to state 75
    type      go to state 58


State 57

   27 var_decls: var_decl .

    $default  reduce using rule 27 (var_decls)


State 58

   28 var_decl: type . id_list_local ';'
   29 id_list_local: . id_list_local ',' ID
   30              | . ID

    ID  shift, and go to state 76

    id_list_local  go to state 77


State 59

   53 method_call: ID . '(' opt_call_arg_list ')'
   66 lvalue: ID . opt_array
   67 opt_array: . '[' expr ']'
   68          | . %empty  ['=']

    '['  shift, and go to state 78
    '('  shift, and go to state 79

    $default  reduce using rule 68 (opt_array)

    opt_array  go to state 80


State 60

   43 statement: KW_BREAK . ';'

    ';'  shift, and go to state 81


State 61

   55 method_call: KW_READ . read_list
   62 read_list: . read_list ',' lvalue
   63          | . lvalue
   66 lvalue: . ID opt_array

    ID  shift, and go to state 82

    read_list  go to state 83
    lvalue     go to state 84


State 62

   54 method_call: KW_PRINT . print_list
   60 print_list: . print_list ',' argument
   61           | . argument
   64 argument: . STRING_CONSTANT
   65         | . expr
   66 lvalue: . ID opt_array
   69 expr: . expr OP_OR expra
   70     | . expra
   71 expra: . expra OP_AND equality
   72      | . equality
   73 equality: . equality OP_EQ relational
   74         | . equality OP_NE relational
   75         | . relational
   76 relational: . relational OP_GT shift
   77           | . relational OP_LT shift
   78           | . relational OP_LTE shift
   79           | . relational OP_GTE shift
   80           | . shift
   81 shift: . shift OP_SHIFT_RIGHT module
   82      | . shift OP_SHIFT_LEFT module
   83      | . shift OP_ROT module
   84      | . module
   85 module: . module '%' expras
   86       | . expras
   87 expras: . expras '+' term
   88       | . expras '-' term
   89       | . term
   90 term: . term '*' factor
   91     | . term '/' factor
   92     | . factor
   93 factor: . '-' factor
   94       | . '!' factor
   95       | . lvalue
   96       | . ID '(' opt_call_arg_list ')'
   97       | . constant
   98       | . '(' expr ')'
   99 constant: . INT_CONSTANT
  100         | . CHAR_CONSTANT
  101         | . bool_constant
  102 bool_constant: . KW_TRUE
  103              | . KW_FALSE

    INT_CONSTANT     shift, and go to state 31
    CHAR_CONSTANT    shift, and go to state 32
    ID               shift, and go to state 85
    STRING_CONSTANT  shift, and go to state 86
    KW_TRUE          shift, and go to state 33
    KW_FALSE         shift, and go to state 34
    '('              shift, and go to state 87
    '-'              shift, and go to state 88
    '!'              shift, and go to state 89
